<resources>
    <string name="app_name">Bloodoor</string>
    <string name="otp_verification">OTP verification</string>
    <string name="we_will_send_an_otp_on_this_given_mobile_number">We will send an OTP on this given mobile number.</string>
    <string name="enter_mobile_number">Enter Mobile Number</string>
    <string name="_9876543210">9876543210</string>
    <string name="get_otp">Get OTP</string>
    <string name="todo">TODO</string>
    <string name="please_enter_the_otp_send_to_you">Please enter the OTP sent to you.</string>
    <string name="didn_t_receive_the_opt">Didn\'t receive the OPT?</string>
    <string name="resend_otp">RESEND OTP</string>
    <string name="enter">Enter</string>
    <string name="enter_full_name">Enter full name…</string>
    <string name="sign_up">Sign Up</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="email_id">Email ID</string>
    <string name="city">City…</string>
    <string name="home_address">Home Address</string>
    <string name="select_blood_group">Select Blood Group..</string>
    <string name="blood_group">Blood Group</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="select_gender">select gender</string>
    <string name="enter_handler_name">Enter Handler Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="enter_blood_bank_name">Enter Blood Bank Name</string>
    <string name="faq">Common Doubts!</string>
    <string name="que1">Why should I donate blood?</string>
    <string name="ans1">You have to donate blood yourself to find out. By Blood donation you greatly contribute towards a healthier, happier society by making available safe blood. Any one may need blood at any time may be ourselves or our near ones. You also benefit in other ways by donating blood as it reduces the chances of ischemic heart diseases.</string>
    <string name="que2">Are their any side effects of Blood donations?</string>
    <string name="ans2">There are no side effects of blood donation. The Blood bank staff ensures that your blood donation is a good experience as far as possible to enable you to become a repeat and a regular blood donor. There are a number of people who have donated more than 25–100 times in their life time.</string>
    <string name="que3">Can I get any disease like AIDS or Hepatitis or any other disease by Blood donation?</string>
    <string name="ans3">As only sterile disposables are used to collect blood and these disposables can be used only one time it eliminates any chances of acquiring any disease from blood donation.</string>
    <string name="que4">What are the eligibility criteria of blood donation?</string>
    <string name="ans4">The eligible donors should be between 18 to 60 years of age, having a healthy pattern of lifestyle. The body weight should be above 45 kgs. The haemoglobin should be above 12.5 g%.</string>
    <string name="que5">How often can I donate Blood?</string>
    <string name="ans5">After every three – four months you can donate blood.</string>
    <string name="que6">What should I eat before blood-donation?</string>
    <string name="ans6">Anything that you normally eat at home. Eat a light snacks and a cold drink before blood donation is sufficient.</string>
    <string name="que7">How much time does it take to donate blood?</string>
    <string name="ans7">You will be asked to fill a donor form. Your medical history will be taken by a medical personnel and a small drop of blood to check blood group as well as Hb for anemia. After simple medical screening process and being found medically fit to donate, you will be sent to blood collection room. The actual blood collection from the donor takes about 7–10 minutes followed by a little rest and refreshments.</string>
    <string name="que8">What happens to blood I donate?</string>
    <string name="ans8"><![CDATA[Your blood in the blood bank is processed and within 6 hours of Blood collection It is separated into components viz. Red Cells, White Cells, Plasma & Platelets. These Blood components are made available for the patients. By making blood components, all the useful parts of blood can be used and from one unit of blood four patients can be benefited.]]></string>
    <string name="que9">What are the post donation care?</string>
    <string name="ans9">Care that a donor should take after donating blood=> 1. Eat and drink the refreshment provided before leaving the blood bank 2. Drink more liquids than usual in next 4 hours 3. Avoid consuming alcohol until you have eaten something 4. Don\'t smoke for next 30 minutes 5. Avoid climbing stairs for next 30 minutes 6. If there is bleeding from the phlebotomy site, raise the arm and apply pressure 7. If fainting or dizziness occurs, either lie down or sit with the head between the knees.</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="general_information">General Information</string>
    <string name="name">Name</string>
    <string name="enter_new_name">Enter New Name</string>
    <string name="enter_otp_here">Enter OTP here</string>
    <string name="verify_continue"><![CDATA[VERIFY & CONTINUE]]></string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="all_users_list">All Users List</string>
    <string name="profile">Profile</string>
    <string name="find">Find</string>
    <string name="google_map_key">AIzaSyBiatmFBVSvgYGqmWT9Gru3aySRPyAISLA</string>
    <string name="title_activity_maps">Map</string>
    <string name="google_map_key1">AIzaSyC26fzMOt39Pp0VKMoZ-GsSFUjK9HGyShg</string>

    <string name="access_token">sk.eyJ1IjoiZ3Jwbm8yNCIsImEiOiJja3cwbTdzb2QwbGIxMm5yb202YzBsamY1In0.41vL7ZBnwdfF2afHtVnpCw</string>
    <string name="start_navigation">Start Navigation</string>
    <string name="blood_bank_name">Blood Bank Name</string>
    <string name="enquiry">Enquiry</string>
    <string name="directions">Directions</string>
    <string name="mail">Mail</string>
    <string name="dropdown_items">Dropdown Items</string>
    <string name="email_sent_successfully">Email Sent Successfully</string>
    <string name="close">Close</string>
    <string name="contact">Contact</string>
</resources>