<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/label"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    app:cardElevation="60dp"
    app:cardCornerRadius="15dp"
    android:layout_marginTop="5dp"
    android:layout_marginBottom="5dp"
    >
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        android:background="@color/white">

        <TextView
            android:id="@+id/bb_name0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="10dp"
            android:layout_margin="5dp"
            android:textStyle="bold"
            android:text="Blood Bank Name"
            android:textColor="@color/design_default_color_primary"
            android:textSize="15sp"
            app:drawableTint="#6200EE"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:drawableLeftCompat="@drawable/ic_person" />

        <TextView
            android:id="@+id/bb_holder_name0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Holder Name"
            android:drawablePadding="10dp"
            android:layout_margin="5dp"
            android:textColor="#3F51B5"
            app:drawableTint="#3F51B5"
            android:textSize="15sp"
            app:drawableLeftCompat="@drawable/ic_person"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bb_name0"/>

        <TextView
            android:id="@+id/mobileNo0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mobile_number"
            android:drawablePadding="10dp"
            android:layout_margin="5dp"
            android:textColor="#3F51B5"
            app:drawableTint="#3F51B5"
            android:textSize="15sp"
            app:drawableLeftCompat="@drawable/mobiletwo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bb_holder_name0"/>

        <TextView
            android:id="@+id/phoneNo0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Phone Number"
            android:drawablePadding="10dp"
            android:layout_margin="5dp"
            android:textColor="#3F51B5"
            app:drawableTint="#3F51B5"
            android:textSize="15sp"
            app:drawableLeftCompat="@drawable/ic_phone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mobileNo0"/>

        <TextView
            android:id="@+id/email0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email_id"
            android:drawablePadding="10dp"
            android:layout_margin="5dp"
            android:textColor="#3F51B5"
            app:drawableTint="#3F51B5"
            android:textSize="15sp"
            app:drawableLeftCompat="@drawable/ic_email"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/phoneNo0" />

        <TextView
            android:id="@+id/homeAddress0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home_address"
            android:textColor="#3F51B5"
            android:drawablePadding="10dp"
            android:layout_margin="5dp"
            app:drawableTint="#3F51B5"
            android:textSize="15sp"
            app:drawableLeftCompat="@drawable/ic_home"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email0" />

        <TextView
            android:id="@+id/city0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/city"
            android:textColor="#3F51B5"
            android:drawablePadding="10dp"
            android:layout_margin="5dp"
            app:drawableTint="#3F51B5"
            android:textSize="15sp"
            app:drawableLeftCompat="@drawable/ic_home"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/homeAddress0" />

        <Button
            android:id="@+id/btn_email"
            android:layout_width="90dp"
            android:layout_height="40dp"
            android:background="@drawable/buttonback"
            android:gravity="center_horizontal"
            android:text="Email"
            android:textColor="@color/colortextfirst"
            android:textSize="14sp"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/city0" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>